# BC-PointCloudFilter

./: .gitignore  CMakeLists.txt  README.md  README_sk.md  package.xml
config/: PC_Filter_params.yaml
launch/: PC_Filter_launch.py
params/: params.yaml
src/: PC_Filter.cpp  Projector.cpp  Projector.h  projekcia.cpp
